<resources>
    <!--scan page-->
    <string name="title_qrcode">扫一扫</string>
    <string name="title_order">我的订单</string>
    <string name="title_user_center">个人中心</string>
    <string name="nav_title_qrcode">扫一扫</string>
    <string name="nav_title_order">订单</string>
    <string name="nav_title_user_center">我的</string>


    <!--qrcode page-->
    <string name="tv_refresh_qrcode_title">点击刷新二维码</string>
    <string name="welcome">欢迎光临</string>
    <string name="scan_qrcode_message">请扫二维码进店</string>
    <string name="message_order_not_paid">有未支付订单</string>
    <string name="message_goto_order_page">点击去支付</string>
    <string name="message_no_payment">未开通支付方式</string>
    <string name="message_goto_payment_page">点击去开通</string>


    <!--login page-->
    <string name="title_login">登录</string>
    <string name="tv_mobile_prefix">+86</string>
    <string name="tv_captcha_text">验证码</string>
    <string name="et_mobile_placeholder">请输入手机号</string>
    <string name="message_mobile_number_error">请输入正确手机号</string>
    <string name="btn_get_captcha_title">获取验证码</string>
    <string name="et_captcha_placeholder">请输入验证码</string>
    <string name="btn_login_title">登录</string>
    <string name="tv_login_desc">点击登录，表示您已阅读并同意</string>
    <string name="tv_service_terms">《服务条款》</string>
    <string name="sms_send_success">短信已发送，请查收</string>
    <string name="sms_send_failure">发送失败：</string>
    <string name="send_after_second">%ds后重发</string>
    <string name="login_success_message">注册/登录成功！</string>
    <string name="login_success_failure">注册/登录失败：</string>
    <string name="message_captcha_sending">发送中...</string>
    <string name="message_login">登录中...</string>
    <string name="message_image_captcha_error">图片验证码验证错误</string>
    <string name="message_refresh_image_captcha_failed">刷新图片验证码失败</string>

    <!--term of service-->
    <string name="title_term_of_service">服务条款</string>

    <!--order page-->
    <string name="tab_order_title">订单</string>
    <string name="tab_topup_title">充值记录</string>
    <string name="message_take_something">随便拿点啥吧~</string>
    <string name="message_please_topup">请去充值哦～</string>
    <string name="tv_select_paytype_title">请选择支付方式</string>
    <string name="tv_paydesc_title">需支付</string>
    <string name="tv_price_unit">元</string>
    <string name="tv_pay_by_alipay_title">支付宝支付</string>
    <string name="tv_pay_by_weixin_title">微信支付</string>
    <string name="message_pay_failed">支付失败</string>
    <string name="message_goto_pay_order">去支付</string>
    <string name="message_in_payment">支付中</string>
    <string name="tv_goods_count">共%d件商品</string>
    <string name="tv_actual_paid_amount">实付：</string>
    <string name="order_status_finished">已完成</string>

    <!--order detail-->
    <string name="title_order_detail">订单详情</string>
    <string name="tv_orderId_short_title">单号：</string>
    <string name="tv_store_title">门店：</string>
    <string name="tv_order_date_title">日期：</string>
    <string name="tv_order_amount_title">金额：</string>
    <string name="tv_order_status_title">状态：</string>
    <string name="tv_order_desc_title">描述：</string>
    <string name="tv_goods_list_title">商品列表</string>
    <string name="btn_order_appeal_title">申诉</string>
    <string name="tv_orderId_title">订单编号</string>


    <!--order appeal-->
    <string name="title_order_appeal">订单申诉</string>
    <string name="tv_order_appeal_desc_title">问题描述</string>
    <string name="et_order_appeal_hint">请您在此填写申诉内容</string>
    <string name="message_order_appeal_content_empty">请输入问题描述</string>

    <!--feedback-->
    <string name="title_feedback">意见反馈</string>
    <string name="title_feedback_handle_result">处理结果</string>
    <string name="tv_feedback_handle_result_title">处理结果</string>
    <string name="tv_feedback_type_title">反馈类型</string>
    <string name="tv_feedback_type_advice">建议</string>
    <string name="tv_feedback_type_problem">问题</string>
    <string name="et_feedback_hint">请输入建议或者问题的描述</string>
    <string name="message_feedback_content_empty">请输入问题描述</string>

    <!--user center-->
    <string name="tv_coupon_title">优惠券</string>
    <string name="tv_guide_title">进店指南</string>
    <string name="tv_feedback_title">意见反馈</string>
    <string name="tv_set_title">设置</string>
    <string name="tv_logout_title">退出账号</string>
    <string name="message_not_logged_in">未登录</string>
    <string name="message_signout">您确定要退出账号吗？</string>

    <!--setting-->
    <string name="title_setting">设置</string>
    <string name="tv_payment_title">支付方式</string>
    <string name="tv_version_title">版本号</string>
    <string name="tv_auto_login_title">免登录</string>
    <string name="tv_notification_title">消息通知</string>

    <!--payment-->
    <string name="title_payment">支付方式</string>
    <string name="payment_third_type_title">%s支付</string>
    <string name="payment_third_type_sign">开通%s支付</string>
    <string name="payment_third_type_signed">已开通%s支付</string>
    <string name="payment_third_type_unsign">关闭%s支付</string>
    <string name="message_third_type_sign_success">已开通%s支付</string>
    <string name="message_third_type_unsign_success">已关闭%s支付</string>
    <string name="message_third_type_unsign_failure">%s支付关闭失败</string>
    <string name="message_third_type_sign_failure">%s支付开通失败</string>
    <string name="message_third_type_unsign_alert">确定关闭%s支付？</string>
    <string name="message_pay_client_not_installed">请先安装%s～</string>
    <string name="message_wechat_pay_result_success">支付成功</string>
    <string name="message_wechat_pay_result_cancel">支付已取消</string>
    <string name="message_wechat_pay_result_fail">支付失败</string>
    <string name="message_switch_to_order_page">正在跳转至订单页...</string>

    <!--coupon-->
    <string name="title_coupon">优惠券</string>
    <string name="tab_coupon_unused">未使用</string>
    <string name="tab_coupon_used">已使用</string>
    <string name="tab_coupon_expired">已过期</string>
    <string name="message_coupon_empty">没有可用优惠券</string>
    <string name="dialog_coupon_message1">您已获取</string>
    <string name="dialog_coupon_message2">首次购物即可使用</string>
    <string name="message_unused_coupon_notify">您有%s元的优惠券未使用哦～</string>

    <!--guide-->
    <string name="guide_title_one">请扫码进门</string>
    <string name="guide_title_two">拿取和放回</string>
    <string name="guide_title_three">不能给予他人哦</string>
    <string name="guide_title_four">即拿即走，自动结账</string>

    <!--notification-->


    <!--connom & app-->
    <string name="message_alert">提示</string>
    <string name="title_ok">确定</string>
    <string name="title_cancel">取消</string>
    <string name="skip">跳过</string>
    <string name="network_error">网络异常</string>
    <string name="currency_cny">¥</string>
    <string name="no_network">连接不到网络</string>
    <string name="commit">提交</string>
    <string name="commit_failed">提交失败</string>
    <string name="commit_success">提交成功</string>
    <string name="message_in_process">处理中...</string>
    <string name="dialog_title_app_upgrade">版本更新</string>
    <string name="message_new_app_version">新版本发布了，请下载更新！</string>
    <string name="btn_donot_update_title">稍后再说</string>
    <string name="btn_update_now_title">立即更新</string>
    <string name="message_loading_dialog_please_wait">请稍等...</string>
    <string name="message_account_expired">用户信息过期，请重新登录</string>


</resources>
