<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cloudpick.aigo.aigo_ui.LoginActivity"
    android:background="#eee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_login"
            android:background="@color/colorWhite"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent" >
        </android.support.v7.widget.Toolbar>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:paddingRight="5dp"
                    android:theme="@style/cell">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|right"
                        android:text="@string/tv_mobile_prefix"
                        android:layout_marginRight="15dp"
                        android:textSize="16sp"/>
                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:maxLength="11"
                        android:ems="10"
                        android:inputType="phone"
                        android:focusable="true"
                        android:textSize="16sp"
                        android:hint="@string/et_mobile_placeholder"/>
                    <Button
                        android:id="@+id/btn_get_captcha"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:text="@string/btn_get_captcha_title"
                        android:layout_marginLeft="15dp"
                        android:padding="5dp"
                        android:textSize="12dp"
                        android:background="@color/colorLightGrey"
                        android:enabled="false"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorGrey"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:theme="@style/cell">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|right"
                        android:text="@string/tv_captcha_text"
                        android:layout_marginRight="15dp"
                        android:textSize="16sp"/>
                    <EditText
                        android:id="@+id/et_captcha"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:ems="10"
                        android:maxLength="6"
                        android:textSize="16sp"
                        android:hint="@string/et_captcha_placeholder"/>
                </LinearLayout>
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@color/colorOrange"
                    android:text="@string/btn_login_title"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:enabled="false"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_login_desc"/>
                    <TextView
                        android:id="@+id/txt_service_terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorOrange"
                        android:text="@string/tv_service_terms"/>
                </LinearLayout>
            </LinearLayout>

            <View android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/toolbar_dropshadow"/>

        </FrameLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
