<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="30dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDarkBlack"
        android:textSize="20sp"
        android:text="@string/tv_captcha_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_captcha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:inputType="text"
                android:focusable="true"
                android:textCursorDrawable="@null"
                android:hint="@string/et_captcha_placeholder"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_captcha"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_round_corner"
        android:text="@string/title_ok"
        android:textSize="16sp"
        android:textColor="@color/colorWhite" />

</LinearLayout>