<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateFeedbackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_feedback"
            android:background="@color/colorWhite"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent">
        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:theme="@style/cell">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="20dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:text="@string/tv_feedback_type_title"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btn_feedback_advice"
                            android:layout_width="60dp"
                            android:layout_height="30dp"
                            android:text="@string/tv_feedback_type_advice"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/colorDefault"
                            android:background="@drawable/shape_round_corner"/>
                        <Button
                            android:id="@+id/btn_feedback_problem"
                            android:layout_width="60dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/tv_feedback_type_problem"
                            android:textColor="@color/colorBlack"
                            android:background="@drawable/shape_round_corner"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="10dp">
                        <EditText
                            android:id="@+id/et_feedback_content"
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            android:padding="6dp"
                            android:hint="@string/et_feedback_hint"
                            android:background="@drawable/shape_round_corner"
                            android:inputType="textMultiLine"
                            android:gravity="top|left"
                            android:maxLength="500"
                            android:textSize="16sp"
                            android:scrollbars="vertical"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"
                        android:gravity="center">
                        <Button
                            android:id="@+id/btn_commit_feedback"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textAlignment="center"
                            android:background="@drawable/shape_round_corner"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"
                            android:text="@string/commit"/>
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <View android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/toolbar_dropshadow"/>
        </FrameLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
