<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderAppealActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_order_appeal"
            android:background="@color/colorWhite"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent">
        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:theme="@style/cell">
                        <TextView
                            android:id="@+id/tv_orderId"
                            android:paddingTop="3dp"
                            android:paddingBottom="3dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:paddingTop="3dp"
                            android:paddingBottom="3dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:text="@string/tv_order_appeal_desc_title"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@drawable/shape_round_corner_textarea">
                            <EditText
                                android:id="@+id/et_order_appeal_content"
                                android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:padding="6dp"
                                android:hint="@string/et_order_appeal_hint"
                                android:background="@drawable/shape_round_corner_noborder"
                                android:inputType="textMultiLine"
                                android:gravity="top|left"
                                android:maxLength="500"
                                android:textSize="13sp"
                                android:scrollbars="vertical"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingTop="10dp"
                            android:paddingLeft="50dp"
                            android:paddingRight="50dp"
                            android:gravity="center">
                            <Button
                                android:id="@+id/btn_commit_appeal"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:textAlignment="center"
                                android:background="@drawable/shape_round_corner_bg_default"
                                android:textColor="@color/colorWhite"
                                android:textSize="16sp"
                                android:text="@string/commit"/>
                        </LinearLayout>
                    </LinearLayout>
                    <FrameLayout
                        android:id="@+id/fragment_container_goods_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </FrameLayout>
                </LinearLayout>

            </ScrollView>

            <View android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/toolbar_dropshadow"/>
        </FrameLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
